test: 测试与稳定性补强（T8）：并发、审批降级、多租户隔离与 LLM 故障注入
- 分布式锁：同会话多线程竞争互斥、相同 sessionId 跨租户并行（SessionLockManagerTest +2）
- 审批超时降级：等待超时降级 TIMEOUT、approve/reject 唤醒、跨租户越权审批隔离（ApprovalRegistryTest +7）
- RAG 并发一致性：并发写多文档不丢、同文档覆盖终态一致、并发重建检索视图一致（LocalRagIndexStoreConcurrencyTest +3）
- 多租户隔离：会话/记忆按命名空间隔离、RAG 全局共享 + API 层 RagAccessPolicy 越权拒绝（MultiTenantIsolationTest +4）
- LLM 故障注入：429 限流/5xx/超时重试与降级（ResilientLlmGatewayRetryTest +4）